# Youtube-Sentiments-Insight

./: .gitignore  Dockerfile  README.md  dvc.yaml  main.py  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: cicd.yaml
flask_api/: main.py
notebooks/: 1_Preprocessing_&_EDA.ipynb  2_experiment_1_baseline_model.ipynb  3_experiment_2_bow_tfidf.ipynb  4_experiment_3_tfidf_(1,3)_max_features.ipynb  5_experiment_4_handling_imbalanced_data.ipynb  6_experiment_5_xgboost_with_hpt.ipynb  8_stacking.ipynb
src/model/: model_evaluation.py  register_model.py
yt-chrome-plugin-frontend/: popup.js
