[project]
name = "youtube-sentiments-insight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.36",
    "dvc[s3]==3.53.0",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "imbalanced-learn>=0.12.0",
    "joblib==1.4.2",
    "lightgbm>=4.5.0",
    "matplotlib==3.9.2",
    "mlflow==2.17.0",
    "nltk==3.9.1",
    "numpy==2.1.2",
    "optuna>=4.7.0",
    "pandas==2.2.3",
    "pathspec==0.11.2",
    "scikit-learn>=1.5.0",
    "seaborn==0.13.2",
    "wordcloud==1.9.3",
    "xgboost>=3.1.3",
]
